--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<ol class="list-unstyled How-it-works-list">
 				<li>Answer a Few Questions</li>
 				<li>Companies Send You Offers with Upfront Compensation</li>
-				<li>Find a Job and Get a $2000 Bonus From Hired</li>
+				<li>Find a Job and Get a $2000 Bonus From Hire</li>
 			</ol>
 		</section>
 
